--- a/src/components/HomePage/Navigation/Navigation.scss
+++ b/src/components/HomePage/Navigation/Navigation.scss
@@ -4,6 +4,10 @@ $font_family_sans: sans-serif;
 $background_color_grey333: rgba(1, 1, 1, 0.6);
 $background_color_greylighter: #ddd;
 
+.stencil {
+	font-family: 'Stardos Stencil', cursive !important;
+	font-weight: bold;
+}
 .topnav {
 	background-color: $background_color_grey333;
 	overflow: hidden;
