--- a/stylesheets/globalStyles.scss
+++ b/stylesheets/globalStyles.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto|Stardos+Stencil&display=swap');
+@import url('https://db.onlinewebfonts.com/c/cf85131ef1119a8d56e92cd8ff533995?family=Sylfaen');
+
 body {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
 }
 
