--- a/src/components/HomePage/MyWorks/MyWorks.scss
+++ b/src/components/HomePage/MyWorks/MyWorks.scss
@@ -7,13 +7,12 @@
 	h3 {
 		color:black;
 	}
-	hr { 
-		display: block; 
-		height: 1px;
-		border: 0; 
-		border-top: 2px solid #000;
-		padding: 0 0 40px; 
-		width:	45%;
-		margin: 0 auto;
+	.myCard {
+		background-image: url('../../../../static/websprotospics.png');
+		border: 1px solid #c5c5c5;
+		border-radius: 16px;
+		min-height: 60vh;
+		box-shadow: 0px 0px 21px #888;
+		cursor: pointer;
 	}
 }
