Fixing Webpack + My Works section

--- a/src/components/HomePage/Navigation/Navigation.scss
+++ b/src/components/HomePage/Navigation/Navigation.scss
@@ -20,7 +20,7 @@ $background_color_greylighter: #ddd;
 		display: block;
 		color: $color_lightwhite;
 		text-align: center;
-		padding: 14px 16px;
+		padding: 15px;
 		text-decoration: none;
 		font-size: 17px;
 		font-family: $font_family_sans;
