--- a/src/components/HomePage/AboutMe/AboutMe.scss
+++ b/src/components/HomePage/AboutMe/AboutMe.scss
@@ -13,6 +13,15 @@
 	img {
 		display: none;
 	}
+	hr { 
+		display: block; 
+		height: 1px;
+		border: 0; 
+		border-top: 2px solid #fff;
+		padding: 0 0 30px; 
+		width:	85%;
+		margin: 0;
+	}
 	@media screen and (max-width: 750px) {
 		img {
 			display: block;			
