--- a/src/components/HomePage/MyWorks/MyWorks.scss
+++ b/src/components/HomePage/MyWorks/MyWorks.scss
@@ -8,11 +8,23 @@
 		color:black;
 	}
 	.myCard {
-		background-image: url('../../../../static/websprotospics.png');
-		border: 1px solid #c5c5c5;
-		border-radius: 16px;
+		text-align: left;
+		border: 1px solid #000;
 		min-height: 60vh;
-		box-shadow: 0px 0px 21px #888;
 		cursor: pointer;
+		.imgResize {
+			width: 100%;
+			height: auto;
+			opacity: 0.8;
+		}
+		.fakeButton {
+			border: solid 1px #000;
+			border-radius: 9px;
+			padding: 10px;
+			text-align: center;
+			font-size: 1.5rem;
+			width: 200px;
+			float: right;
+		}
 	}
 }
