Fixing mobile and include Menu Hamburguer

--- a/src/components/HomePage/AboutMe/AboutMe.scss
+++ b/src/components/HomePage/AboutMe/AboutMe.scss
@@ -24,7 +24,9 @@
 	}
 	@media screen and (max-width: 750px) {
 		img {
-			display: block;			
+			display: block;	
+			width: 100%;		
+			height: auto;
 		}
 		h2 {
 			color: black;
