--- a/src/components/HomePage/Navigation/Navigation.scss
+++ b/src/components/HomePage/Navigation/Navigation.scss
@@ -8,6 +8,9 @@ $background_color_greylighter: #ddd;
 	font-family: 'Stardos Stencil', cursive !important;
 	font-weight: bold;
 }
+.menuBurguer {
+	display: none;
+}
 .topnav {
 	background-color: $background_color_grey333;
 	overflow: hidden;
@@ -43,11 +46,27 @@ $background_color_greylighter: #ddd;
 	-webkit-filter: invert(100%);
 	margin: 2px 10px;
 }
-@media screen and (max-width: 600px) {
+
+@media (max-width: 756px) {
+	.showFeature {
+		display: block !important;
+	}
 	.topnav {
-		a {
-			display: block;
+		a:not(:first-child) {
+			display: none;
 			width: 100%;
 		}
+		a {
+			font-size: 15px;
+		}
+	}
+	.menuBurguer {
+		display: block !important;
+		color: #fff;
+		width: 40px;
+		padding: 15px;
+		margin-right: 22px;
+		float: right;
+		cursor: pointer;
 	}
 }
