--- a/src/components/HomePage/AboutMe/AboutMe.scss
+++ b/src/components/HomePage/AboutMe/AboutMe.scss
@@ -22,22 +22,27 @@
 		width:	85%;
 		margin: 0;
 	}
-	@media screen and (max-width: 750px) {
-		img {
-			display: block;	
-			width: 100%;		
-			height: auto;
-		}
-		h2 {
-			color: black;
-		}
-		h3 {
-			color:black;
-		}
-	}
 }
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 756px) {
 	.containerBackground {
 		background-image: none;
+		background: linear-gradient(#023136 70%, white 30%) !important;
+		color: white;
+		height: auto;
+		padding-bottom: 10px;
+		padding-top: 10px;
+		h3 {
+			padding-bottom: 20px;
+		}
+		img {
+			display: block;	
+			width: 80%;		
+			margin: 0 auto;
+			height: auto;
+			border: solid 3px #0a444e;
+		}
+	}
+	.clearDisplay {
+		display: block !important;
 	}
 }
