--- a/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
@@ -14,42 +14,91 @@
     color: visible;
     opacity: 1;
     padding-top: 120px;
+    .popUp {
+        background-color: white;
+        color: black;
+        padding: 40px 40px;
+        margin: 40px;
+        margin-bottom: 161px !important;
+        height: 100vh;
+        overflow: scroll;
+        .mainComponent {
+            background-image: url('../../../../../static/eventi.png');
+            height: 200px;
+            background-repeat: no-repeat;
+            background-size: 100%;
+            position: relative;
+            .bottomContainer {
+                height: 60px;
+                position: absolute;
+                bottom: 0px;
+                width: 100%;
+                background: rgba(0,0,0,0.6);
+                cursor: pointer;
+                h2 {
+                    padding: 11px;
+                    color: white;
+                }
+            }
+            .positionSmooth {
+                position: relative;
+            }
+        }
+        .autoHeight {
+            height: auto;
+            background-size: 100% 60px;
+        }
+    }
+    a {
+        position: absolute;
+        color: white;
+        text-decoration: none;
+        font-size: 200%;
+        top: 3.5%;
+        right: 5%;
+        border: solid 1px #fff;
+        border-radius: 40px;
+        padding: 3px 10px;
+        opacity: 0.8;
+        &:hover {
+            opacity: 0.8;
+            background-color: white;
+        }
+    }
 }
 
+.contentPopup {
+    margin-bottom: 9%;
+}
+
+.resizeImage {
+    width: 100%;
+    height: auto;
+}
 .popUpOverlaytarget {
     visibility: visible;
 	opacity: 1;
 	z-index: 999999999999;
 }
 
-.popUp {
-    text-align: center;
-    background-color: white;
-    color: black;
-    padding: 40px 20px;
-    margin: 40px;
-    margin-bottom: 0px !important;
-    height: 100vh;
-    overflow: scroll;
+hr { 
+    display: block; 
+    height: 1px;
+    border: 0; 
+    border-top: 2px solid #000;
+    padding: 0 0 30px; 
+    width:	35%;
+    margin: 0;
 }
 
-.popUp p {
-    margin: 5% 10% 7% 10%;
-}
-
-.popUp a {
-    position: absolute;
-    color: white;
-    text-decoration: none;
-    font-size: 200%;
-    top: 3.5%;
-    right: 5%;
-    border: solid 1px #fff;
+.colorRounded {
     border-radius: 40px;
-    padding: 3px 10px;
-    opacity: 0.8;
-    &:hover {
-        opacity: 0.8;
-        background-color: white;
-    }
+    height: 75px;
+    width: 75px;
+    float: left;
+    margin-right: 15px; 
 }
+
+/*.popUp div {
+    margin: 5% 0 7%;
+}*/
