Inclusion of more data and pictures

--- a/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
@@ -22,11 +22,29 @@
         margin-bottom: 0px !important;
         height: 100vh;
         overflow: scroll;
-        .EVENTI {
+        .eventiWebwork {
             background-image: url('../../../../../static/eventi.png');
         }
-        .MyHealth {
+        .myHealthWebwork {
             background-image: url('../../../../../static/myhealth.png');
+        }
+        .cantynaWebWork {
+            background-image: url('../../../../../static/cantyna.png');
+        }
+        .bottiWebWork {
+            background-image: url('../../../../../static/eventi.png');
+        }
+        .mangaWebWork {
+            background-image: url('../../../../../static/manga.png');
+        }
+        .planninPortalWebWork {
+            background-image: url('../../../../../static/plannin-portal.png');
+        }
+        .polandtripsWebWork {
+            background-image: url('../../../../../static/polandtrips.png');
+        }
+        .tattooshareWebWork {
+            background-image: url('../../../../../static/tattooshare.png');
         }
         .mainComponent {
             height: 200px;
