Change the order by beauty and setting the correct background on Botto

--- a/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
@@ -32,7 +32,7 @@
             background-image: url('../../../../../static/cantyna.png');
         }
         .bottiWebWork {
-            background-image: url('../../../../../static/eventi.png');
+            background-image: url('../../../../../static/botti.png');
         }
         .mangaWebWork {
             background-image: url('../../../../../static/manga.png');
