--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<link rel="icon" type="image/png" sizes="32x32" href="https://alexspadlo.github.io/src/img/fav.ico" />
 		<script src="https://kit.fontawesome.com/f558a597bb.js"></script>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
