Inclusion of Interactive House

--- a/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
@@ -46,6 +46,9 @@
         .tattooshareWebWork {
             background-image: url('../../../../../static/tattooshare.png');
         }
+        .interactiveHouseWebwork {
+            background-image: url('../../../../../static/planning_small_banner.png');
+        }
         .mainComponent {
             height: 200px;
             background-repeat: no-repeat;
