Split in one more component and separate content from Fashion

--- a/src/components/HomePage/MyWorks/PopupContent/WebContent/WebContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/WebContent/WebContent.scss
@@ -23,31 +23,31 @@
         height: 100vh;
         overflow: scroll;
         .eventiWebwork {
-            background-image: url('../../../../../static/eventi.png');
+            background-image: url('../../../../../../static/eventi.png');
         }
         .myHealthWebwork {
-            background-image: url('../../../../../static/myhealth.png');
+            background-image: url('../../../../../../static/myhealth.png');
         }
         .cantynaWebWork {
-            background-image: url('../../../../../static/cantyna.png');
+            background-image: url('../../../../../../static/cantyna.png');
         }
         .bottiWebWork {
-            background-image: url('../../../../../static/botti.png');
+            background-image: url('../../../../../../static/botti.png');
         }
         .mangaWebWork {
-            background-image: url('../../../../../static/manga.png');
+            background-image: url('../../../../../../static/manga.png');
         }
         .planninPortalWebWork {
-            background-image: url('../../../../../static/plannin-portal.png');
+            background-image: url('../../../../../../static/plannin-portal.png');
         }
         .polandtripsWebWork {
-            background-image: url('../../../../../static/polandtrips.png');
+            background-image: url('../../../../../../static/polandtrips.png');
         }
         .tattooshareWebWork {
-            background-image: url('../../../../../static/tattooshare.png');
+            background-image: url('../../../../../../static/tattooshare.png');
         }
         .interactiveHouseWebwork {
-            background-image: url('../../../../../static/planning_small_banner.png');
+            background-image: url('../../../../../../static/planning_small_banner.png');
         }
         .mainComponent {
             height: 200px;
