--- a/src/components/HomePage/AboutMe/AboutMe.scss
+++ b/src/components/HomePage/AboutMe/AboutMe.scss
@@ -8,7 +8,7 @@
 	background-position: top right;
 	background-size: 100%;
 	background-repeat: no-repeat;
-	height: 80vh;
+	height: 65vh;
 	max-height: get-vw(800px);
 	h2 {
 		color: white;
@@ -27,6 +27,12 @@
 		padding: 0 0 30px; 
 		width:	85%;
 		margin: 0;
+	}
+}
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+	.containerBackground {
+		height: 50vh;
 	}
 }
 @media (min-width: 768px) and (max-width: 1024px) {
