--- a/stylesheets/globalStyles.scss
+++ b/stylesheets/globalStyles.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Stardos+Stencil&display=swap');
 @import url('https://db.onlinewebfonts.com/c/cf85131ef1119a8d56e92cd8ff533995?family=Sylfaen');
 
-html,body {
+html {
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -12,10 +12,19 @@ html,body {
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0;
 }
 
 h5 {
 	text-align: center;
 	font-size: 1rem;
 	margin: 50px;
+}
+
+@media (max-width: 767px) {
+	body {
+		overflow-x: hidden;
+	}
 }
