--- a/src/components/HomePage/AboutMe/AboutMe.scss
+++ b/src/components/HomePage/AboutMe/AboutMe.scss
@@ -1,15 +1,9 @@
-@function get-vw($target) { 
-	//$vw-context: ;
-	@return $target;
-}
-
 .containerBackground {
 	background-image: url('../../../../static/hero.png');
 	background-position: top right;
 	background-size: 100%;
 	background-repeat: no-repeat;
 	height: 65vh;
-	max-height: get-vw(800px);
 	h2 {
 		color: white;
 	}
@@ -35,6 +29,30 @@
 		height: 50vh;
 	}
 }
+
+@media only screen and (min-width: 999px)
+				   and (max-width: 1024px)
+				   and (max-height: 768px)  
+                   and (orientation: landscape) {
+	.containerBackground {
+		height: 50vh !important;
+	}
+}
+
+@media only screen and (min-width: 800px)
+				   and (max-width: 823px)  
+                   and (orientation: landscape) {
+	.containerBackground {
+		height: 85vh !important;
+		h2 {
+			font-size: 1.9rem !important;
+		}
+		h3 {
+			font-size: 1.3rem !important;
+		}
+	}
+}
+
 @media (min-width: 768px) and (max-width: 1024px) {
 	.containerBackground {
 		height: 30vh;
