--- a/src/components/HomePage/HeroBanner/HeroBanner.scss
+++ b/src/components/HomePage/HeroBanner/HeroBanner.scss
@@ -46,15 +46,34 @@
 
 }
 
+@media only screen and (max-width: 823px)  
+                   and (orientation: landscape) {
+	.containerBackground {
+		height: 75vh !important;
+		hr {
+			width: 60%;
+			padding-bottom: 20px !important;
+		}
+	}
+	h1 {
+		font-size: 1.7rem !important;
+		padding-bottom: 0px !important;
+	}
+	h2 {
+		font-size: 1.5rem !important;
+	}
+}
+
 //Pixel 2XL 823
 //Iphone X 812
+
 //Ipad??
 
 @media only screen and (max-width: 767px)  
                    and (orientation: landscape) {
-					.containerBackground {
-						height: 75vh !important;
-					}
+	.containerBackground {
+		height: 75vh !important;
+	}
 }
 
 @media (max-width: 767px) {
