--- a/src/components/HomePage/Navigation/Navigation.scss
+++ b/src/components/HomePage/Navigation/Navigation.scss
@@ -44,6 +44,22 @@ $background_color_greylighter: #ddd;
 	margin: 2px 10px;
 }
 
+@media only screen and (max-width: 823px)  
+                   and (orientation: landscape) {
+	.showFeature {
+		display: block !important;
+	}
+	.topnav {
+		a:not(:first-child) {
+			display: none;
+			width: 100%;
+		}
+		a {
+			font-size: 15px;
+		}
+	}
+}
+
 @media (max-width: 767px) {
 	.showFeature {
 		display: block !important;
