--- a/stylesheets/globalStyles.scss
+++ b/stylesheets/globalStyles.scss
@@ -23,6 +23,12 @@ h5 {
 	margin: 50px;
 }
 
+@media only screen and (max-width: 823px)  
+                   and (orientation: landscape) {
+	body {
+		overflow-x: hidden;
+	}
+}
 @media (max-width: 767px) {
 	body {
 		overflow-x: hidden;
