Change imported fonts to local fonts

--- a/src/components/HomePage/Navigation/Navigation.scss
+++ b/src/components/HomePage/Navigation/Navigation.scss
@@ -5,8 +5,8 @@ $background_color_grey333: rgba(1, 1, 1, 0.6);
 $background_color_greylighter: #ddd;
 
 .stencil {
-	font-family: 'Stardos Stencil', cursive !important;
-	font-weight: bold;
+	font-family: 'MyStardos', cursive !important;
+	font-weight: normal;
 }
 .topnav {
 	background-color: $background_color_grey333;
