--- a/src/components/HomePage/HeroBanner/HeroBanner.scss
+++ b/src/components/HomePage/HeroBanner/HeroBanner.scss
@@ -6,8 +6,8 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 	h1 {
-		font-family: 'Stardos Stencil', cursive;
-		font-weight: bold;
+		font-family: 'MyStardos', cursive;
+		font-weight: normal;
 		font-size: 4.3rem;
 		letter-spacing: 2px;
 		padding-bottom: 20px;
@@ -24,7 +24,7 @@
 	}
 	h2 {
 		font-size: 3rem;
-		font-family: 'Sylfaen';
+		font-family: 'MySylfaen';
 		color: white;
 	}
 }
