--- a/stylesheets/globalStyles.scss
+++ b/stylesheets/globalStyles.scss
@@ -1,5 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto|Stardos+Stencil&display=swap');
-@import url('https://db.onlinewebfonts.com/c/cf85131ef1119a8d56e92cd8ff533995?family=Sylfaen');
+@font-face {
+	font-family: 'MyRoboto';
+	src: url('../static/fonts/roboto/Roboto-Regular.woff2') format('woff2'), /* Pretty Modern Browsers */
+		 
+}
+
+@font-face {
+	font-family: 'MyStardos';
+	src: url('../static/fonts/stardos/StardosStencil-Regular.woff2') format('woff2'), /* Pretty Modern Browsers */
+}
+
+@font-face {
+	font-family: 'MySylfaen';
+	src: url('../static/fonts/sylfaen/sylfaen.woff2') format('woff2'), /* Pretty Modern Browsers */
+}
 
 html {
 	width: 100%;
@@ -10,7 +23,7 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'MyRoboto', sans-serif;
   margin: 0;
   width: 100%;
   height: 100%;
