--- a/src/components/HomePage/MyWorks/PopupContent/ArtContent/ArtContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/ArtContent/ArtContent.scss
@@ -13,103 +13,93 @@
     visibility: hidden;
     color: visible;
     opacity: 1;
-    padding-top: 120px;
     .popUp {
         background-color: white;
         color: black;
-        padding: 40px 40px;
+        padding: 0 40px 0 0;
         margin: 40px;
-        margin-bottom: 0px !important;
-        height: 100vh;
+        height: 90%;
         overflow: scroll;
         width: 100%;
-        .eventiWebwork {
-            background-image: url('../../../../../../static/eventi.png');
-        }
-        .myHealthWebwork {
-            background-image: url('../../../../../../static/myhealth.png');
-        }
-        .cantynaWebWork {
-            background-image: url('../../../../../../static/cantyna.png');
-        }
-        .bottiWebWork {
-            background-image: url('../../../../../../static/botti.png');
-        }
-        .mangaWebWork {
-            background-image: url('../../../../../../static/manga.png');
-        }
-        .planninPortalWebWork {
-            background-image: url('../../../../../../static/plannin-portal.png');
-        }
-        .polandtripsWebWork {
-            background-image: url('../../../../../../static/polandtrips.png');
-        }
-        .tattooshareWebWork {
-            background-image: url('../../../../../../static/tattooshare.png');
-        }
-        .interactiveHouseWebwork {
-            background-image: url('../../../../../../static/planning_small_banner.png');
-        }
-        .mainComponent {
-            height: 200px;
-            background-repeat: no-repeat;
-            background-size: cover;
-            position: relative;
-            .bottomContainer {
-                height: 60px;
-                position: absolute;
-                bottom: 0px;
+        .panelBackground {
+            background-image: url('../../../../../../static/panel_background.png');
+            .tabsLeft {
                 width: 100%;
-                background: rgba(255,255,255,0.7);
-                cursor: pointer;
-                h2 {
-                    padding: 11px;
-                    color: black;
+                li {
+                    width: 100%;
+                    padding: 20px;
+                    text-align: center;
+                    float: none;
+                    margin: 0px;
+                    cursor: pointer;
+                    &:hover, &:focus {
+                        background-color: rgba(0,0,0,0.6);
+                        border: none;
+                        border-radius: 0px;
+                        margin: 0px;
+                    }
+                    a {
+                        text-decoration: none;
+                        color: #fff;
+                        font-size: 1.5rem;
+                        font-weight: bold;
+                    }
+                }
+                .active {
+                    background-color: rgba(0,0,0,0.6);
+                    border: none;
+                    border-radius: 0px;
+                    margin: 0px;
                 }
             }
-            .positionSmooth {
-                position: relative;
-            }
         }
-        .autoHeight {
-            height: auto;
-            background-size: 100% 60px;
+    }
+    .myClose {
+        z-index: 9999999999999;
+        position: absolute;
+        color: black;
+        text-decoration: none;
+        font-size: 200%;
+        top: 7%;
+        right: 5%;
+        border: solid 1px #000;
+        border-radius: 40px;
+        padding: 3px 10px;
+        opacity: 0.8;
+        &:hover {
+            opacity: 0.5 !important;
+            background-color: black;
+            color: white;
         }
     }
 }
 
-@media (max-width: 767px) {
-    .clearDisplay {
-        display: block !important;
+.controlLeft {
+    background-image: url('../../../../../../static/carousel-arrow-left.png') !important;
+    width: 50px;
+    height: 50px;
+}
+
+.controlRight {
+    background-image: url('../../../../../../static/carousel-arrow-right.png') !important;
+    width: 50px;
+    height: 50px;
+}
+
+.carouselSpec {
+    padding: 0 60px 0 80px;
+}
+
+.carouseControl {
+    position: absolute;
+    top: 45%;
+    z-index: 5;
+    display: inline-block;
+    &.carouselNext {
+        right: -6%;
     }
-    .textCenterSmall{
-        text-align: center;
-    }
-    .popUpOverlay {
-        padding-top: 0px;
-        .popUp {
-            margin: 0 !important;
-            .mainComponent {
-                background-size: cover !important;
-            }
-            .hrLeft {
-                margin: 0 0 20px !important;
-            }
-        }
-        a {
-            color: black;
-            border: solid 1px #000;
-            position: relative;
-            top: 0;
-            right: 0;
-        }
-    }
-    .h4Small {
-        font-size: 1.0rem;
-    }
-    .h2Small {
-        font-size: 1.0rem !important;
-        padding: 20px !important;
+    &.carouselPrev {
+        left: -4%;
     }
 }
 
@@ -153,3 +143,10 @@ hr {
 /*.popUp div {
     margin: 5% 0 7%;
 }*/
+
+
+
+  
+  
+  
+  
