--- a/src/components/HomePage/MyWorks/PopupContent/WebContent/WebContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/WebContent/WebContent.scss
@@ -89,6 +89,7 @@
         &:hover {
             opacity: 0.8;
             background-color: white;
+            color: black;
         }
     }
 }
