--- a/src/components/HomePage/MyWorks/MyWorks.scss
+++ b/src/components/HomePage/MyWorks/MyWorks.scss
@@ -1,63 +1,171 @@
-.containerBackground {
-	background-color: white;
-	padding-bottom: 3%;
-	h2 {
-		color: black;
-	}
-	h3 {
-		color:black;
-	}
-	.myCard {
-		text-align: left;
-		border: 1px solid #000;
-		height: auto;
-		cursor: pointer;
-		.imgResize {
-			width: 100%;
-			height: auto;
-			opacity: 0.8;
-		}
-		.fakeButton {
-			border: solid 1px #0b434e;
-			color: white;
-			background-color: #0b434e;
-			border-radius: 9px;
-			padding: 10px;
-			text-align: center;
-			font-size: 1.5rem;
-			width: 200px;
-			float: right;
-			&:hover {
-				border: solid 1px #00191E;
-				background-color: #00191E;
-			}
-		}
-	}
-}
-
-@media (min-width: 768px) and (max-width: 1024px) {
-	.myCard {
-		h2 {
-			font-size: 1.9rem !important;
-		}
-	}	
+.popUpOverlay {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.9);
+    transition: opacity 500ms;
+    visibility: hidden;
+    color: visible;
+    opacity: 1;
+    padding-top: 120px;
+    .popUp {
+        background-color: white;
+        color: black;
+        padding: 40px 40px;
+        margin: 40px;
+        margin-bottom: 0px !important;
+        height: 100vh;
+        overflow: scroll;
+        .eventiWebwork {
+            background-image: url('../../../../static/eventi.png');
+        }
+        .myHealthWebwork {
+            background-image: url('../../../../static/myhealth.png');
+        }
+        .cantynaWebWork {
+            background-image: url('../../../../static/cantyna.png');
+        }
+        .bottiWebWork {
+            background-image: url('../../../../static/botti.png');
+        }
+        .mangaWebWork {
+            background-image: url('../../../../static/manga.png');
+        }
+        .planninPortalWebWork {
+            background-image: url('../../../../static/plannin-portal.png');
+        }
+        .polandtripsWebWork {
+            background-image: url('../../../../static/polandtrips.png');
+        }
+        .tattooshareWebWork {
+            background-image: url('../../../../static/tattooshare.png');
+        }
+        .interactiveHouseWebwork {
+            background-image: url('../../../../static/planning_small_banner.png');
+        }
+        .mainComponent {
+            height: 200px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            position: relative;
+            .bottomContainer {
+                height: 60px;
+                position: absolute;
+                bottom: 0px;
+                width: 100%;
+                background: rgba(255,255,255,0.7);
+                cursor: pointer;
+                h2 {
+                    padding: 11px;
+                    color: black;
+                }
+            }
+            .positionSmooth {
+                position: relative;
+            }
+        }
+        .autoHeight {
+            height: auto;
+            background-size: 100% 60px;
+        }
+    }
+    .myClose {
+        position: absolute;
+        color: white;
+        text-decoration: none;
+        font-size: 200%;
+        top: 3.5%;
+        right: 5%;
+        border: solid 1px #fff;
+        border-radius: 40px;
+        padding: 3px 10px;
+        opacity: 0.8;
+        &:hover {
+            opacity: 0.8;
+            background-color: white;
+            color: black;
+        }
+    }
 }
 
 @media (max-width: 767px) {
-	.containerBackground {
-		h3 {
-			font-size: 1.4rem !important;
-		}
-	}
-	.myCard {
-		margin-bottom: 20px;
-		text-align: center !important;
-		h2 {
-			font-size: 1.4rem !important;
-		}
-		.fakeButton {
-			float: none !important;
-			margin: 0 auto !important;
-		}
-	}	
+    .clearDisplay {
+        display: block !important;
+    }
+    .textCenterSmall{
+        text-align: center;
+    }
+    .popUpOverlay {
+        padding-top: 0px;
+        .popUp {
+            margin: 0 !important;
+            .mainComponent {
+                background-size: cover !important;
+            }
+            .hrLeft {
+                margin: 0 0 20px !important;
+            }
+        }
+        .myClose {
+            color: black;
+            border: solid 1px #000;
+            position: relative;
+            top: 0;
+            right: 0;
+        }
+    }
+    .h4Small {
+        font-size: 1.0rem;
+    }
+    .h2Small {
+        font-size: 1.0rem !important;
+        padding: 20px !important;
+    }
 }
+
+.contentPopup {
+    background-color: white;
+    margin-bottom: 9%;
+}
+
+.resizeImage {
+    width: 100%;
+    height: auto;
+}
+.popUpOverlaytarget {
+    visibility: visible;
+	opacity: 1;
+	z-index: 999999999999;
+}
+
+.rightHr {
+    float: right;
+}
+
+hr { 
+    display: block; 
+    height: 1px;
+    border: 0; 
+    border-top: 2px solid #000;
+    padding: 0 0 30px; 
+    width:	35%;
+    margin: 0;
+}
+
+.colorRounded {
+    border-radius: 40px;
+    height: 75px;
+    width: 75px;
+    float: left;
+    margin-right: 15px; 
+}
+
+/*.popUp div {
+    margin: 5% 0 7%;
+}*/
