--- a/src/components/HomePage/MyWorks/MyWorks.scss
+++ b/src/components/HomePage/MyWorks/MyWorks.scss
@@ -1,63 +1,143 @@
+$red: #E1332D;
+$white: #fff;
+
+* {
+  transition-property: all;
+  transition-duration: .6s;
+  transition-timing-function: ease;
+}
+
 .containerBackground {
 	background-color: white;
-	padding-bottom: 3%;
+
+	.mobileYes {
+		display: none;
+	}
+
+	.paddingControl {
+		padding-top: 3rem;
+		padding-bottom: 3rem;
+	}
+
 	h2 {
 		color: black;
 	}
 	h3 {
 		color:black;
 	}
-	.myCard {
-		text-align: left;
-		border: 1px solid #000;
-		height: auto;
-		cursor: pointer;
-		.imgResize {
-			width: 100%;
-			height: auto;
-			opacity: 0.8;
+
+	.mywebBackground {
+		background-image: url('../../../../static/webui.png');
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: cover;
+		
+		img {
+			visibility: hidden;
 		}
-		.fakeButton {
-			border: solid 1px #0b434e;
-			color: white;
-			background-color: #0b434e;
-			border-radius: 9px;
-			padding: 10px;
-			text-align: center;
-			font-size: 1.5rem;
-			width: 200px;
-			float: right;
-			&:hover {
-				border: solid 1px #00191E;
-				background-color: #00191E;
+	}
+
+	.myArtBackground {
+		background-image: url('../../../../static/artdesign.png');
+		background-repeat: no-repeat;
+		background-position: center center;
+		background-size: cover;
+		
+		img {
+			visibility: hidden;
+		}
+	}
+	
+	.mysecondContainer {
+		padding: 1.5em 2.5em;
+
+		.customPadding {
+			padding-bottom: 50px;
+		}
+		
+		.buttonWrap { 
+			align-items: center;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			text-align: center; 
+
+			a {
+				position: absolute !important;
+				bottom: 20px
+			}
+
+			.mainButton {
+				color: #fff;
+				cursor: pointer;
+				font-size:16px;
+				font-weight: 400;
+				line-height: 45px;
+				max-width: 160px; 
+				position: relative;
+				text-decoration: none;
+				text-transform: uppercase;
+				width: 100%; 
+				&:hover { text-decoration: none; }
+			}
+			
+			.buttonRec {
+				background: darken($red, 1.5%);
+				font-weight: 100;
+				
+				svg {
+					height: 45px;
+					left: 0;
+					position: absolute;
+					top: 0; 
+					width: 100%; 
+				}
+				
+				rect {
+					fill: none;
+					stroke: #fff;
+					stroke-width: 2;
+					stroke-dasharray: 422, 0;
+					transition: all 0.35s linear;
+				}
+				&:hover {
+					background: rgba($red, 0);
+					color: black;
+					font-weight: 900;
+					letter-spacing: 1px;
+					
+					rect {
+						stroke: #000;
+						stroke-width: 5;
+						stroke-dasharray: 15, 310;
+						stroke-dashoffset: 48;
+						transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+					}
+				}
 			}
 		}
 	}
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-	.myCard {
-		h2 {
-			font-size: 1.9rem !important;
-		}
-	}	
-}
 
-@media (max-width: 767px) {
+@media (max-width: 700px) {
 	.containerBackground {
+		.paddingControl {
+			padding-top: 0;
+			padding-bottom: 0;
+		}
 		h3 {
-			font-size: 1.4rem !important;
+			text-align: center;
+		}
+		.mobileYes {
+			display: block;
+		}
+		.mobileNo {
+			display: none;
+		}
+		.columControl {
+			flex: 0 0 100%;
+			max-width: 100%;
 		}
 	}
-	.myCard {
-		margin-bottom: 20px;
-		text-align: center !important;
-		h2 {
-			font-size: 1.4rem !important;
-		}
-		.fakeButton {
-			float: none !important;
-			margin: 0 auto !important;
-		}
-	}	
 }
