--- a/src/components/HomePage/Navigation/Navigation.scss
+++ b/src/components/HomePage/Navigation/Navigation.scss
@@ -3,77 +3,190 @@ $color_blackpure: black;
 $font_family_sans: sans-serif;
 $background_color_grey333: rgba(1, 1, 1, 0.6);
 $background_color_greylighter: #ddd;
+$background_color_white: #fff;
 
 .stencil {
-	font-family: 'MyStardos', cursive !important;
-	font-weight: normal;
+	font-family: 'Carrinady' !important;
+	font-size: 35px !important;
+	padding: 15px 0;
+	margin: 0;
 }
+
+.textCenter {
+	text-align: center;
+}
+
+.mobileContainer {
+	display: none;
+}
+
 .topnav {
-	background-color: $background_color_grey333;
-	overflow: hidden;
-	position: fixed;
+	background-color: $background_color_white;
+	position: relative;
 	width: 100%;
-	top: 0;
-	z-index: 999999;
-	button {
-		background: transparent;
-		outline: 0;
-		border: none;
-		float: right;
-		display: block;
-		color: $color_lightwhite;
-		text-align: center;
-		padding: 15px;
-		text-decoration: none;
-		font-size: 17px;
-		font-family: $font_family_sans;
-		&:hover {
-			background-color: $background_color_greylighter;
+
+	.toggleButton {
+		display: none !important;
+	}
+	
+	.contactSection {
+		position: absolute;
+		right: 0;
+		z-index: 2;
+		width: 350px;
+		text-align: left;
+		background-color: rgba(83, 76, 88, 0.9) !important;
+
+
+		h3 {
+			padding: 30px 20px;
+			span {
+				cursor: pointer;
+				color: white;
+				i {
+					color: white;
+				}
+			}
+
+			&:hover {
+				background-color: white;
+
+				.successCheck {
+					color: #06cc06;
+				}
+				span {
+					color: black;
+					i {
+						color: black;
+					}
+				}
+			}
+		}
+
+	}
+	.rightSection {
+		position: absolute;
+		right: 0;
+		top: 0;
+		padding: 0;
+
+		.socialIcons {
+
+			.instagramIcon {
+				margin: 0 8px 15px;
+			}
+			
+			i {
+				padding: 25px 11px;
+
+				&:hover {
+					color: rgb(72, 136, 255) !important;
+				}
+			}
+
+		}
+		button {
+			background: transparent;
+			outline: 0;
+			border: none;
+			font-family: 'Carrinady' !important;
+			float: right;
+			display: block;
 			color: $color_blackpure;
-			&:nth-child(2) {
-				background-color: $background_color_greylighter;
-			}
-			&:nth-child(3) {
-				background-color: $background_color_greylighter;
+			text-align: center;
+			padding: 18px 22px;
+			text-decoration: none;
+			font-size: 31px;
+			
+			&:hover {
+				background-color: rgba(83, 76, 88, 0.9) !important;
+				color: white !important;
 			}
 		}
 	}
 }
 
-.cursorPointer{
-	cursor: pointer;
-	filter: invert(100%);
-	-webkit-filter: invert(100%);
-	margin: 2px 10px;
+@media (max-width: 700px) {
+	.borderCorrection {
+		min-height: 32vh;
+		img {
+			position: absolute;
+			top: -2px
+		}
+	}
+	.noMobile {
+		display: none;
+	}
+	.mobileContainer {
+		padding: 15px 20px;
+		display: block;
+
+		a {
+			margin-right: 25px;
+			i {
+				color: white;
+			}
+		}
+	}
 }
 
-@media only screen and (max-width: 823px)  
-                   and (orientation: landscape) {
-	.showFeature {
-		display: block !important;
+@media (max-width: 932px) {
+	.stencil {
+		margin-left: 20px;
+		text-align: left;
 	}
-	.topnav {
-		button:not(:first-child) {
-			display: none;
+}
+
+@media (max-width: 580px) {
+	.topnav { 
+		.stencil {
+			font-size: 25px !important;
+		}
+		.rightSection {
+			button {
+				padding: 11px 22px;
+			}
+		}
+	}
+}
+
+@media (max-width: 580px) {
+	.topnav { 
+		.stencil {
+			font-size: 25px !important;
+		}
+		.rightSection {
+			button {
+				padding: 11px 22px;
+			}
+		}
+	}
+}
+
+@media (max-width: 480px) {
+	.topnav { 
+		.contactSection { 
 			width: 100%;
 		}
-		button {
-			font-size: 15px;
+		.stencil {
+			font-size: 20px !important;
 		}
-	}
-}
-
-@media (max-width: 767px) {
-	.showFeature {
-		display: block !important;
-	}
-	.topnav {
-		button:not(:first-child) {
-			display: none;
-			width: 100%;
-		}
-		button {
-			font-size: 15px;
+		.rightSection {
+			.toggleButton {
+				display: block !important;
+				padding: 5px 22px !important;
+				i {
+					color: black;
+				}
+				&:hover {
+					i {
+						color: white;
+					}
+				}
+			}
+			.removeButton {
+				display: none !important;
+			}
 		}
 	}
 }
