--- a/stylesheets/globalStyles.scss
+++ b/stylesheets/globalStyles.scss
@@ -1,7 +1,11 @@
 @font-face {
 	font-family: 'MyRoboto';
-	src: url('../static/fonts/roboto/Roboto-Regular.woff2') format('woff2'), /* Pretty Modern Browsers */
-		 
+	src: url('../static/fonts/roboto/Roboto-Regular.woff2') format('woff2'), /* Pretty Modern Browsers */		 
+}
+
+@font-face {
+	font-family: 'Carrinady';
+	src: url('../static/fonts/Carrinady/CarrinadyBold.woff2') format('woff2'), /* Pretty Modern Browsers */		 
 }
 
 @font-face {
