--- a/src/components/HomePage/ContactMe/ContactMe.scss
+++ b/src/components/HomePage/ContactMe/ContactMe.scss
@@ -1,67 +1,7 @@
-.containerBackground {
-	background-color: #00191E;
-	h3 {
-		color: white;
-	}
-	h2 {
-		color:white;
-	}
-	hr { 
-		display: block; 
-		height: 1px;
-		border: 0; 
-		border-top: 2px solid #fff;
-		padding: 0 0 30px; 
-		width:	80%;
-		margin: 0;
-	}
-	.contactmeLinks {
-		color: white;
-		text-decoration: none !important;
-		&:hover {
-			color: #bfbfbf;
-			text-decoration: none !important;
-		}
-	}
-	.iconHover{
-		&:hover {
-			color: #bfbfbf !important;
-		}
-	}
-	.rightHr {
-		float: right;
-	}
-	.clearfix {
-		clear: both;
-	}
-}
-
-@media (max-width: 767px) { 
-	.containerBackground {
-		height: auto !important;
-	}
-	.clearDisplay {
-		display: block !important;
-	}
-	h2 {
-		padding-top: 20px;
-		padding-bottom: 0px;
-		margin-bottom: 0px !important;
-	}
-	hr {
-		margin: 0 auto !important;
-		width: 70% !important;
-		padding-bottom: 10px !important;
-	}
-	h3 {
-		font-size: 1rem !important;
-	}
-	.rightHr {
-		float: none !important;
-		margin: 0 auto !important;
-		width: 70% !important;
-	}
-	.paddingNoneSm {
-		padding: 0 0 20px !important;
+.mainContainer {
+	background-color: #020202;
+	.copyRight {
+		color: #bfbfbf;
+		margin-bottom: 0;
 	}
 }
