Inclusion of new workds

--- a/src/components/HomePage/MyWorks/PopupContent/WebContent/WebContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/WebContent/WebContent.scss
@@ -28,6 +28,9 @@
         .myHealthWebwork {
             background-image: url('../../../../../../static/myhealth.png');
         }
+        .bodyWorkGymmap {
+            background-image: url('../../../../../../static/gymappbanner.png')
+        }
         .globechainRedesign {
             background-image: url('../../../../../../static/globechainmain.png');
         }
