--- a/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
@@ -28,6 +28,9 @@
         .myHealthWebwork {
             background-image: url('../../../../../static/myhealth.png');
         }
+        .bodyWorkGymmap {
+            background-image: url('../../../../../static/gymappbanner.png')
+        }
         .cantynaWebWork {
             background-image: url('../../../../../static/cantyna.png');
         }
