--- a/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
+++ b/src/components/HomePage/MyWorks/PopupContent/PopupContent.scss
@@ -46,6 +46,9 @@
         .polandtripsWebWork {
             background-image: url('../../../../../static/polandtrips.png');
         }
+        .muzzAppmusic {
+            background-image: url('../../../../../static/banner_small_muzz.png');
+        }
         .tattooshareWebWork {
             background-image: url('../../../../../static/tattooshare.png');
         }
