Include trillion of meta tags

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-		<link rel="icon" type="image/png" sizes="32x32" href="https://alexspadlo.github.io/images/fav.ico" />
+		<link rel="icon" href="https://alexspadlo.github.io/images/fav.ico" />
+		<meta charset="UTF-8">
+		<meta name="description" content="Creative Designer from Poland Aleksandra Spadlo. Living in London, UK. ART, Illustrations, Fashion, Comics, Games, UI/UX" />
+		<meta name="keywords" content="Aleksandra Spadlo, Graphic Design, Illustration, Fashion, Comics, Games, UI/UX" />
+		<meta name="author" content="Aleksandra Spadlo" />
+		<meta name="robots" content="index, follow" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:image" content="https://mir-s3-cdn-cf.behance.net/user/276/3ea52e365070877.5e3318b7544c0.jpg" />
+		<meta name="twitter:site" content="@alexspadlo" />
+		<meta property="og:image" content="https://mir-s3-cdn-cf.behance.net/user/276/3ea52e365070877.5e3318b7544c0.jpg" />
+		<meta property="og:site_name" content="Github Aleksandra Spadlo" />
+		<meta property="og:title" content="Aleksandra Spadlo portfolio" />
+		<meta property="og:url" content="https://alexspadlo.github.io" />
 		<script src="https://kit.fontawesome.com/f558a597bb.js"></script>
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+		<link rel="canonical" href="https://alexspadlo.github.io" />
 		<title>Aleksandra Spadlo</title>
 	</head>
-    <body>
-        <div id="root">
-        </div>
-    </body>
+	<body>
+		<div id="root">
+		</div>
+	</body>
 </html>
