Minor fix image

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
 		<meta name="author" content="Aleksandra Spadlo" />
 		<meta name="robots" content="index, follow" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:image" content="https://mir-s3-cdn-cf.behance.net/user/276/3ea52e365070877.5e3318b7544c0.jpg" />
+		<meta name="twitter:image" content="https://alexspadlo.github.io/images/heroAlexbanner.png" />
 		<meta name="twitter:site" content="@alexspadlo" />
-		<meta property="og:image" content="https://mir-s3-cdn-cf.behance.net/user/276/3ea52e365070877.5e3318b7544c0.jpg" />
-		<meta property="og:site_name" content="Github Aleksandra Spadlo" />
+		<meta property="og:image" content="https://alexspadlo.github.io/images/heroAlexbanner.png" />
+		<meta property="og:site_name" content="Github" />
 		<meta property="og:title" content="Aleksandra Spadlo portfolio" />
 		<meta property="og:url" content="https://alexspadlo.github.io" />
 		<script src="https://kit.fontawesome.com/f558a597bb.js"></script>
